Covered the test cases